Fix bug - 001 - Navbar link visible on close

--- a/src/components/Navbar/navbar.module.css
+++ b/src/components/Navbar/navbar.module.css
@@ -10,7 +10,6 @@
 }
 .mobile_menu {
   display: none;
-  color: #490fbe;
 }
 
 @media screen and (max-width: 768px) {
