--- a/src/components/Navlinks/navlinks.module.css
+++ b/src/components/Navlinks/navlinks.module.css
@@ -34,6 +34,9 @@
 .mobile_close {
   display: none;
 }
+.mobile_menu {
+  display: none;
+}
 @media screen and (max-width: 768px) {
   .navlinks {
     position: fixed;
